--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ My song room
 <body>
 <form action='file.js'>
 <input label='first-input'></input>
+  <button action='submit'></button>
 <form>
 </body>
 </html>
