--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 My song room
 </title>
 <body>
-  <script src="https://raw.githubusercontent.com/Bhaskar-jat/Public-Test-site/refs/heads/main/file.js"></script>
+  <script src="./file.js"></script>
 <form action='file.js'>
 <input label='first-input'></input>
   <button action='submit'></button>
