--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 My song room
 </title>
 <body>
-  <script src="./file.js"></script>
+  <script type="text/javascript" crossorigin="anonymous" src="https://a.b.cdn.console.awsstatic.com/a/v1/IPDMAZ4ML2AMK5CN6QH72TN5PYYZOJWRCEYXPMRAOXQHDI2Q5BPQ/init/621a5812218e4163af400d8e48c9ddb8c0acb847f4b84a92a41640400c16d6a5.js" data-url="https://a.b.cdn.console.awsstatic.com/a/v1/IPDMAZ4ML2AMK5CN6QH72TN5PYYZOJWRCEYXPMRAOXQHDI2Q5BPQ/13ce2ce38ff74f9e851bf5e8612b268bb9cfd95d46984b73af9e0fac7d8dfd83.js"></script>
 <form action='file.js'>
 <input label='first-input'></input>
   <button action='submit'></button>
