--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>
-My song room
-</title>
+  <meta charset="UTF-8" />
+  <title>GraphQL WS Introspection Test</title>
+</head>
 <body>
-  <script type="text/javascript" crossorigin="anonymous" src="https://a.b.cdn.console.awsstatic.com/a/v1/IPDMAZ4ML2AMK5CN6QH72TN5PYYZOJWRCEYXPMRAOXQHDI2Q5BPQ/init/621a5812218e4163af400d8e48c9ddb8c0acb847f4b84a92a41640400c16d6a5.js" data-url="https://a.b.cdn.console.awsstatic.com/a/v1/IPDMAZ4ML2AMK5CN6QH72TN5PYYZOJWRCEYXPMRAOXQHDI2Q5BPQ/13ce2ce38ff74f9e851bf5e8612b268bb9cfd95d46984b73af9e0fac7d8dfd83.js"></script>
-<form action='file.js'>
-<input label='first-input'></input>
-  <button action='submit'></button>
-<form>
+  <h1>GraphQL WebSocket Introspection</h1>
+  <p>Open your browser console and look for “‹GraphQL WS›” messages.</p>
+
+  <!-- Include your test script -->
+  <script src="test-introspection.js"></script>
 </body>
 </html>
